--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -14,7 +14,7 @@
                         <div class="card-header text-white bg-info">
                             <p class="card-text">
                                 <h5 class="card-title">
-                                    Movie Name Sample
+                                    @item.Name
                                     <a class="text-white float-right"><i class="bi bi-pencil-square"></i></a>
                                 </h5>
                             </p>
