--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -32,7 +32,9 @@
 						<td class="text-center">
 							<a class=" btn btn-outline-primary  text-black"><i class="bi bi-pencil-square"> Edit</i></a> |
 							<a class =" btn btn-outline-info text-black "><i class ="bi bi-eye"> Details</i></a> |
-							<a class=" btn btn-danger text-white"><i class="bi bi-trash"> Delete</i></a>
+							<a class="btn btn-danger text-white delete-actor" data-id="@item.Id">
+								<i class="bi bi-trash"> Delete</i>
+							</a>
 						</td>
 					</tr>
 				}
@@ -48,3 +50,56 @@
 		<i class="bi bi-plus-circle"></i> Add new
 	</a>
 </div>
+
+<div class="modal fade" id="deleteActorModal" tabindex="-1" role="dialog" aria-labelledby="deleteActorModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="deleteActorModalLabel">Delete Actor</h5>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this actor?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+@section Scripts {
+	<script>
+		$(document).ready(function () {
+			var actorIdToDelete;
+
+			$('.delete-actor').click(function () {
+				actorIdToDelete = $(this).data('id');
+				$('#deleteActorModal').modal('show');
+			});
+
+			$('#confirmDeleteBtn').click(function () {
+				$.ajax({
+					url: '/Actors/Delete/' + actorIdToDelete,
+					type: 'DELETE',
+					success: function (result) {
+						location.reload();
+					},
+					error: function (xhr, status, error) {
+						console.error(xhr.responseText);
+					}
+				});
+			});
+
+			$('#deleteActorModal').on('hidden.bs.modal', function () {
+				
+				actorIdToDelete = null;
+			});
+
+			
+			$('#deleteActorModal').on('click', '.btn-secondary', function () {
+				$('#deleteActorModal').modal('hide');
+			});
+		});
+	</script>
+}
